# PACTAE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  requirements.txt  runme.sh
benchmark/: CMakeLists.txt  bsamp_la_hybrid.txt  bsmp_multigpu_baselines_benchmark.txt  bsmp_multigpu_benchmark.txt  bsmp_multigpu_scaling_benchmark.txt  figure_3.cu  figure_5.cu  figure_7_bottom.cu  figure_8_bottom.cu  figure_8_top.txt  figure_8_top_left.cu  figure_8_top_right.cu  figure_9.cu  smp_engine_exec.h  smp_executor_f7.cu  smp_init_engine_exec.h  table_1.cu
cmake/: FindCUDA.cmake  FindGlog.cmake
include/smp/: atomic_tflag.h  gs.cuh  kernel.h  kernels.h  smp.h  smp_engine_abs.h  smp_engine_abs_f7.h  smp_engine_abstract_old.h  smp_engine_bamboo.h  smp_engine_gs_1.h  smp_engine_gs_1_f3.h  smp_engine_gs_1_f7.h  smp_engine_gs_1_f9.h  smp_engine_gs_2.h  smp_engine_gs_2_f9.h  smp_engine_hybrid.cuh  (+31 more)
scripts/: check_requirements.sh  f7_collect_mem_ncu.sh  f7_collect_mem_perf.sh  f7_collect_top_all.sh  f7_parse_bottom_times.py  f7_parse_top_mem.py  f7_visualize.py  f8_collect_and_parse_bottom.sh  f8_parse_bottom.py  f8_parse_top_times.py  f8_visualize.py  figure_3_log_parser.py  figure_3_visualize.py  figure_5_log_parser.py  figure_5_visualize.py  figure_9_log_parser.py  figure_9_visualize.py  install_dep.sh  table_1_extract_core_times.py
src/: CMakeLists.txt
src/smp/: gs.cu  gs_par_cpu.cu  gs_seq.cu  kernel.cu  smp.cu  smp_engine_bamboo.cu  smp_engine_gs_1.cu  smp_engine_gs_1_f3.cu  smp_engine_gs_1_f7.cu  smp_engine_gs_1_f9.cu  smp_engine_gs_2.cu  smp_engine_gs_2_f9.cu  smp_engine_hybrid.cu  smp_engine_la_2_f7.cu  smp_engine_la_2_f8_bottom.cu  smp_engine_la_2_f8_top.cu  smp_engine_la_3.cu  smp_engine_la_3_f8_bottom.cu  smp_engine_la_3_f8_tleft.cu  smp_engine_la_3_f8_tright.cu  smp_engine_la_f7.cu  smp_engine_la_old.cu  smp_engine_la_par_cpu.cu  smp_engine_multigpu.cu  smp_engine_mw_1.cu  smp_engine_mw_1_f3.cu  smp_engine_mw_1_f7.cu  smp_engine_mw_1_f9.cu  smp_engine_mw_2.cu  smp_engine_mw_2_f9.cu  smp_engine_mw_3_f7.cu  smp_engine_mw_3_f8_bottom.cu  smp_engine_mw_3_f8_top.cu  smp_engine_mw_3_f9.cu  smp_engine_mw_3_t1.cu  smp_engine_mw_4.cu  smp_engine_mw_4_f8_bottom.cu  smp_engine_mw_4_f8_tleft.cu  smp_engine_mw_4_f8_tright.cu
test/: CMakeLists.txt  bamboosmp_hybrid_test.cu  bamboosmp_multigpu_core_cpu_test.cu  bamboosmp_multigpu_core_gpu_test.cu  bamboosmp_multigpu_init_test.cu  bamboosmp_multigpu_scale_test.cu  bamboosmp_multigpu_test.cu  gs_par_cpu_test.cu  la_par_cpu_test.cu  la_test.cu  smp_engine_bamboo_test.cu  smp_engine_f7_test.cu  smp_engine_gs_1_f9_test.cu  smp_engine_gs_2_f9_test.cu  smp_engine_gs_par_test.cu  smp_engine_gs_seq_test.cu  smp_engine_la_1_test.cu  smp_engine_la_2_test.cu  smp_engine_la_3_test.cu  smp_engine_mw_2_test.cu  smp_engine_mw_3_test.cu  smp_engine_mw_4_test.cu  smp_engine_mw_f8_test.cu  smp_engine_mw_f9_test.cu  smp_engine_mw_test.cu  smp_engine_test_utils.h  smp_init_test.cu  smp_init_test_utils.h  smp_workload_gen_test.cu  smp_workload_gen_test_utils.h  smp_workloads_gen.cu
workflow/: all_figures.sh  build_release.sh  figure_3.sh  figure_5.sh  figure_7.sh  figure_8.sh  figure_9.sh  setup_venv.sh  table_1.sh
(+11 files in other folders)
